Added Pauls Law

--- a/space-agency/index.html
+++ b/space-agency/index.html
@@ -57,7 +57,7 @@
                 <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="index.html">
-                  <img src="img/logo.png" alt="Logo">
+                  <img src="img/logo.pdf" alt="Logo">
                 </a>
               </div>
                 <!-- Collect the nav links, forms, and other content for toggling -->
@@ -97,10 +97,10 @@
           <div class="col-md-7 col-sm-12">
             <div class="block">
               <div class="section-title">
-                <h2>About Us</h2>
-                <p>Groslen is a company comprised of college students with backgrounds in Information Technology and Computer Science. We came up with this app so you could enjoy your night out. With NightSight, you won't need to stand in lines for hours or need to carry cash.</p>
+                <h2>Our Company</h2>
+                <p>Groslen is a company comprised of college students with backgrounds in Information Technology and Computer Science. </p>
               </div>
-              <p>We continue to  </p>
+              <p>Groslen unifies data discovery, business intelligence, and real-time visualization in a single, integrated platform that runs natively on any of your devices. No additional hardware required. We scale out and simplify the Big Data stack, and deliver billions of data points to hundreds of users with near real-time response.</p>
             </div>
           </div><!-- .col-md-7 close -->
           <div class="col-md-5 col-sm-12">
@@ -117,10 +117,10 @@
       <div class="row">
         <div class="col-md-6 col-md-offset-6">
           <h2>WE BELIEVE IN GREAT IDEAS</h2>
-          <p>We are currently in the early stages of creating an app that will completely change the way you experience your night out. Through a missive closed grid network like Snap chat, you'll be able to chat with friends.</p>
-          <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p>Maecenas faucibus mollis interdum. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <a href="work.html" class="btn btn-view-works">View Works</a>
+          <p>We are currently in the early stages of creating an app that will completely change the way you experience your night out. Through a missive closed grid network like Snap chat, you'll be able to super charge your night out.</p>
+          <p>We came up with this app so you could enjoy your night out. With NightSight, you won't need to stand in lines for hours or need to carry cash. With various sources of data we can accurately predict line times and more.</p>
+          <p>With our private and secure network both the customer and the bar benifit. User's can connect with their friends who are at bars near by and avoid bars with small crowds. Bars also benifit by recieving 100% anonymous data to have a better understanding of what their customers like and don't like.</p>
+          <!--<a href="work.html" class="btn btn-view-works">View Works</a>-->
         </div>
       </div>
     </div>
@@ -136,10 +136,10 @@
         <div class="col-md-7 col-sm-12">
           <div class="block">
             <div class="section-title">
-              <h2>About Us</h2>
-              <p>Groslen is a company comprised of college students with backgrounds in Information Technology and Computer Science. We came up with this app so you could enjoy your night out. With NightSight, you won't need to stand in lines for hours or need to carry cash.</p>
+              <h2>Our Promise</h2>
+              <p>We handle consumer data with the greatest level of care. By implementing the most current and secure data security protocols we make sure user data is protected and 100% anonymous.</p>
             </div>
-            <p>We continue to  </p>
+            <p>In order to have a mutually beneficial relationship for customers and clients, we make all user data anonymous. That means when you sign into our services with Facebook or Twitter, your social media account then tied to a randomly generated account ID. From this point on all of your data within our service is fully anonymous and secure, allowing bars to see what people are doing without having access to any of their private information.</p>
           </div>
         </div><!-- .col-md-7 close -->
         <div class="col-md-5 col-sm-12">
@@ -233,9 +233,9 @@
         <div class="row">
           <div class="col-md-12">
             <div class="block">
-              <h2>We design delightful digital experiences.</h2>
-              <p>Read more about what we do and our philosophy of design. Judge for yourself The work and results we’ve achieved for other clients, and meet our highly experienced Team who just love to design.</p>
-              <a class="btn btn-default btn-call-to-action" href="#" >Tell Us Your Story</a>
+              <h2>Like Our Comapny?</h2>
+              <p>Shoot us a message and we'll gladly provide you with more information.</p>
+              <a class="btn btn-default btn-call-to-action" href="contact.html" >Contact Us</a>
             </div>
           </div>
         </div>
@@ -350,13 +350,13 @@
             <div class="footer-manu">
               <ul>
                 <li><a href="#">About Us</a></li>
-                <li><a href="#">Contact us</a></li>
-                <li><a href="#">How it works</a></li>
+                <li><a href="#">Careers</a></li>
+                <li><a href="#">Portal</a></li>
                 <li><a href="#">Support</a></li>
                 <li><a href="#">Terms</a></li>
               </ul>
             </div>
-            <p>Copyright &copy; Crafted by <a href="https://dcrazed.com/">Dcrazed</a>.</p>
+            <p><br>Crafted by <a href="http://github.com/romanbond">Roman Bond</a>.</p>
           </div>
         </div>
       </div>
