Added New iPhone Screenshot

--- a/Groslen/contact.html
+++ b/Groslen/contact.html
@@ -171,7 +171,7 @@
           </div>
         </section>
         <!-- Call to action Start -->
-        <section id="call-to-action">
+        <!--<section id="call-to-action">
           <div class="container">
             <div class="row">
               <div class="col-md-12">
@@ -183,7 +183,7 @@
               </div>
             </div>
           </div>
-        </section>
+        </section>-->
         <!-- footer Start -->
         <footer>
           <div class="container">
@@ -191,14 +191,14 @@
               <div class="col-md-12">
                 <div class="footer-manu">
                   <ul>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Contact us</a></li>
-                    <li><a href="#">How it works</a></li>
-                    <li><a href="#">Support</a></li>
-                    <li><a href="#">Terms</a></li>
+                    <li><a href="404/index.html">About Us</a></li>
+                    <li><a href="404/index.html">Careers</a></li>
+                    <li><a href="404/index.html">Portal</a></li>
+                    <li><a href="404/index.html">Support</a></li>
+                    <li><a href="404/index.html">Terms</a></li>
                   </ul>
                 </div>
-                <p>Copyright &copy; Crafted by <a href="https://dcrazed.com/">Dcrazed</a>.</p>
+                <p><br>Crafted by <a href="https://github.com/romanbond">Roman Bond</a>.</p>
               </div>
             </div>
           </div>
