--- a/Groslen/index.html
+++ b/Groslen/index.html
@@ -349,11 +349,11 @@
           <div class="col-md-12">
             <div class="footer-manu">
               <ul>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Careers</a></li>
-                <li><a href="#">Portal</a></li>
-                <li><a href="#">Support</a></li>
-                <li><a href="#">Terms</a></li>
+                <li><a href="404/index.html">About Us</a></li>
+                <li><a href="404/index.html">Careers</a></li>
+                <li><a href="404/index.html">Portal</a></li>
+                <li><a href="404/index.html">Support</a></li>
+                <li><a href="404/index.html">Terms</a></li>
               </ul>
             </div>
             <p><br>Crafted by <a href="http://github.com/romanbond">Roman Bond</a>.</p>
